# mle-training

./: ..gitignore.swp  .README.md.swp  .flake8  .gitignore  .nonstandardcode.py.swp  Dockerfile  README.md  conf.py  env.yml  setup.cfg  setup.py
agharamudhalvi.egg-info/: PKG-INFO  SOURCES.txt
artifacts/models/: tree_model.pkl
deploy/conda/: linux_cpu_py39.yml
docs/: .conf.py.swp
docs/source/: conf.py  index.rst
src/: ingest_data.py  score.py  train.py
src/AGHARAMUDHALVI_housing.egg-info/: PKG-INFO  SOURCES.txt
src/housing.egg-info/: PKG-INFO
src/mle_AGHARAMUDHALVI.C_housing.egg-info/: PKG-INFO  SOURCES.txt
src/mle_AGHARAMUDHALVI_housing.egg-info/: PKG-INFO  SOURCES.txt
test/unit_test/: ingest_data_test.py  score_test.py  train_test.py
