[metadata]
name = mle-AGHARAMUDHALVI.C-housing
version = v0.3
author = AGHARAMUDHALVI
author_email = agharamudhalvi.c@tigeranalytics.com
description = A installable housing-package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AGHARAMUDHALVI/mle-training
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
[flake8]
ignore = ["E501"]